tests/baselines/reference/moduleUnassignedVariable.errors.txt
moduleUnassignedVariable.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== moduleUnassignedVariable.ts (1 errors) ====
    module Bar {
           ~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export var a = 1;
        function fooA() { return a; } // Correct: return Bar.a
    
        export var b;
        function fooB() { return b; } // Incorrect: return b
    }
    